# fiscal-rs

./: LICENSE  README.md
.github/workflows/: nfe.yml  rust.yml
nfe/: APOIO.md  Cargo.toml  README.md
nfe/src/: dest.rs  emit.rs  ide.rs  lib.rs  nfe.rs  nfe_base.rs
nfe/src/base/: dest.rs  emissao.rs  emit.rs  endereco.rs  error.rs  ide.rs  imposto.rs  item.rs  mod.rs  nfe.rs  operacao.rs  produto.rs  totais.rs  transporte.rs  versao.rs
nfe/src/base/ide/: emissao.rs  mod.rs  operacao.rs
nfe/src/base/item/: mod.rs  produto.rs
nfe/src/base/item/imposto/: cofins.rs  icms.rs  mod.rs  pis.rs
nfe/src/comum/: emit.rs  endereco.rs  ide.rs  mod.rs
nfe/src/modelos/: mod.rs
nfe/src/modelos/nfe/: dest.rs  error.rs  mod.rs
nfe/src/nfe/: dest.rs  mod.rs
nfe/src/padrao/: dest.rs  emissao.rs  emit.rs  endereco.rs  operacao.rs  versao.rs
nfe/src/tests/: dest.rs  emit.rs  endereco.rs  ide.rs  infnfe.rs  itens.rs  mod.rs  parse.rs  totais.rs  transporte.rs
