[package]
name = "nfe"
description = "NF-e - Representação da nota fiscal eletrônica"
version = "0.0.1"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/fiscal-rs"
keywords = ["notafiscal", "nfe"]
categories = ["data-structures", "parser-implementations"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsercher = "3.1.3"
chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1"
serde-xml-rs = "0.4.1"