[package]
name = "nfe"
description = "NF-e - Manipulação da nota fiscal eletrônica"
version = "0.0.3"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/fiscal-rs"
keywords = ["notafiscal", "nfe"]
categories = ["data-structures", "parser-implementations"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1"
derive_more = "0.99.16"

[dependencies.quick-xml]
version = "0.23.0-alpha3"
features = ["serialize"]